--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -231,7 +231,7 @@ jobs:
   ocp-win-mac:
     name: Build OCP for ${{ matrix.python-version }} on ${{ matrix.os }} (${{ matrix.use-vtk }})
     runs-on: ${{ matrix.os }}
-    needs: [sdks-win-mac, sources-win-mac]
+    needs: [sdks-win-mac, sources-win-mac, ocp-proxy]
     strategy:
       fail-fast: false
       matrix:
