--- a/pypi/pyproject.toml
+++ b/pypi/pyproject.toml
@@ -4,12 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "cadquery-ocp"
-version = "7.9.2.0"
+version = "0.0.0.0"
 description = "Python wrapper for Open CASCADE Technology 3D geometry library based on the official CadQuery/OCP sources"
 authors = [{ name = "Bernhard Walter" }]
 requires-python = ">=3.10,<3.15"
 readme = "README.md"
-dependencies = ["cadquery_ocp_proxy==7.9.2.0"]
+dependencies = ["cadquery-ocp-proxy==0.0.0.0"]
 
 [tool.setuptools]
 include-package-data = true
