--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -290,8 +290,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [
-            # "macos-13",
-            # "macos-15",
+            "macos-13",
+            "macos-15",
             "ubuntu-22.04",
             # "ubuntu-22.04-arm",
             "windows-2022",
@@ -300,10 +300,10 @@ jobs:
         python-version: ["3.13"]
         use-vtk: ["vtk", "novtk"]
         include:
-          # - os: "macos-13"
-          #   runner: macos-13
-          # - os: "macos-15"
-          #   runner: macos-15
+          - os: "macos-13"
+            runner: macos-13
+          - os: "macos-15"
+            runner: macos-15
           - os: "ubuntu-22.04"
             runner: ubuntu-22.04
           # - os: "ubuntu-22.04-arm"
