--- a/.github/workflows/build-ocp.yml
+++ b/.github/workflows/build-ocp.yml
@@ -31,8 +31,13 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-22.04", "ubuntu-22.04-arm"]
-        # python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
-        python-version: ["3.13", "3.14"]
+        python-version: [
+        #  "3.10", 
+        #  "3.11", 
+          "3.12", 
+          "3.13", 
+          "3.14"
+        ]
         use-vtk: ["vtk", "novtk"]
         exclude:
           - python-version: "3.14"
@@ -69,7 +74,7 @@ jobs:
         python-version: [
         #  "3.10", 
         #  "3.11", 
-        #  "3.12", 
+          "3.12", 
           "3.13", 
           "3.14"
         ]
@@ -171,7 +176,7 @@ jobs:
         python-version: [
         #  "3.10", 
         #  "3.11", 
-        #  "3.12", 
+          "3.12", 
           "3.13", 
           "3.14"
         ]
@@ -221,7 +226,7 @@ jobs:
         python-version: [
         #  "3.10", 
         #  "3.11", 
-        #  "3.12", 
+          "3.12", 
           "3.13", 
           "3.14"
         ]
@@ -327,7 +332,7 @@ jobs:
         python-version: [
         #  "3.10", 
         #  "3.11", 
-        #  "3.12", 
+          "3.12", 
           "3.13", 
           "3.14"
         ]
