--- a/.github/actions/test-ocp-addons/action.yml
+++ b/.github/actions/test-ocp-addons/action.yml
@@ -44,7 +44,7 @@ runs:
         log-level: warning
         init-shell: bash
         cache-downloads: true
-        cache-environment: true
+        cache-environment: false
         cache-environment-key: environment-ocpaddons-${{ inputs.os }}-novtk
 
     # - - -
