--- a/.github/actions/build-sdks/action.yml
+++ b/.github/actions/build-sdks/action.yml
@@ -77,7 +77,7 @@ runs:
         environment-file: environment.yml
         log-level: warning
         init-shell: ${{ inputs.shells }}
-        cache-environment: true
+        cache-environment: false
         cache-environment-key: environment-${{ inputs.python-version }}-${{ inputs.os }}-${{ inputs.use-vtk }}
 
     # - - -
