do not cache environments 2

--- a/.github/actions/build-ocp-addons/action.yml
+++ b/.github/actions/build-ocp-addons/action.yml
@@ -48,7 +48,7 @@ runs:
         log-level: warning
         init-shell: ${{ inputs.shells }}
         cache-environment: false
-        cache-environment-key: environment-ocpaddons-${{ inputs.python-version }}-${{ inputs.os }}-novtk
+        # cache-environment-key: environment-ocpaddons-${{ inputs.python-version }}-${{ inputs.os }}-novtk
 
     # - - -
     
