--- a/.github/actions/test-ocp-addons/action.yml
+++ b/.github/actions/test-ocp-addons/action.yml
@@ -45,7 +45,7 @@ runs:
         init-shell: bash
         cache-downloads: true
         cache-environment: false
-        cache-environment-key: environment-ocpaddons-${{ inputs.os }}-novtk
+        # cache-environment-key: environment-ocpaddons-${{ inputs.os }}-novtk
 
     # - - -
 
