--- a/.github/actions/build-ocp/action.yml
+++ b/.github/actions/build-ocp/action.yml
@@ -74,7 +74,7 @@ runs:
         init-shell: ${{ inputs.shells }}
         cache-downloads: false
         cache-environment: false
-        cache-environment-key: environment-${{ inputs.python-version }}-${{ inputs.os }}-${{ inputs.use-vtk }}
+        # cache-environment-key: environment-${{ inputs.python-version }}-${{ inputs.os }}-${{ inputs.use-vtk }}
 
     
     - name: Get number of CPUs
