--- a/.github/actions/build-sdks/action.yml
+++ b/.github/actions/build-sdks/action.yml
@@ -252,7 +252,11 @@ runs:
         rm -fr build
 
         if [[ "$RUNNER_OS" == "Linux" ]]; then
-          export CXXFLAGS="-D_GLIBCXX_USE_CXX11_ABI=0" # Disables the C++11 ABI features for VTK compatibility
+          if [[ "$(uname -m)" == "aarch64" ]]; then
+            export CXXFLAGS="-D_GLIBCXX_USE_CXX11_ABI=1"  # ARM VTK uses new C++11 ABI
+          else
+            export CXXFLAGS="-D_GLIBCXX_USE_CXX11_ABI=0"  # x86_64 VTK uses old ABI
+          fi
           COMPILER_FLAGS="-D CMAKE_C_COMPILER=/usr/bin/gcc -D CMAKE_CXX_COMPILER=/usr/bin/g++"
         elif  [[ "$RUNNER_OS" == "macOS" ]]; then
           export CFLAGS="-mmacosx-version-min=11.1"
