--- a/.github/actions/test-ocp/action.yml
+++ b/.github/actions/test-ocp/action.yml
@@ -86,6 +86,12 @@ runs:
 
         uv pip install packaging pytest
 
+        # Install lib3mf wheel for Linux aarch64 (no PyPI wheel available)
+        if [[ "$(uname -s)" == "Linux" && "$(uname -m)" == "aarch64" ]]; then
+          echo "=> Installing lib3mf wheel for Linux aarch64"
+          uv pip install pypi/lib3mf*.whl
+        fi
+
         git clone https://github.com/gumyr/build123d.git
         ocpsvg_min=$(uv run python get-min-version.py build123d/pyproject.toml ocpsvg)
         ocp_gordon_min=$(uv run python get-min-version.py build123d/pyproject.toml ocp_gordon)
@@ -125,6 +131,8 @@ runs:
         else
           sed -i.bak 's/"cadquery-ocp >=.*$/\"cadquery-ocp >= 7.9, < 8.0\",/' pyproject.toml
         fi
+        # Patch to allow Python 3.14
+        sed -i.bak 's/< 3.14/< 3.15/' pyproject.toml
         uv pip install .
 
         echo "=> Installed packages for test"
