--- a/.github/actions/build-ocp-source/action.yml
+++ b/.github/actions/build-ocp-source/action.yml
@@ -167,24 +167,15 @@ runs:
         rm -fr OCP  # remove the cached sources again
 
         if [[ ${{ inputs.os }} == "macos-13" || ${{ inputs.os }} == "macos-15" ]]; then
-          # curl -L -O https://github.com/CadQuery/OCP/releases/download/${{ env.OCP }}/OCP_src_stubs_macOS-latest.zip
-
-          curl -L -O https://github.com/bernhard-42/__temp_artefacts__/releases/download/v7.9.2/OCP_src_stubs_macOS-latest.zip
-                     
+          curl -L -O ${{ env.SOURCE_URL }}/v${{ env.OCCT }}/OCP_src_stubs_macOS-latest.zip
         elif [[ ${{ inputs.os }} == "ubuntu-22.04" || ${{ inputs.os }} == "ubuntu-22.04-arm" ]]; then
-
-          # curl -L -O https://github.com/CadQuery/OCP/releases/download/${{ env.OCP }}/OCP_src_stubs_ubuntu-latest.zip
-
-          curl -L -O https://github.com/bernhard-42/__temp_artefacts__/releases/download/v7.9.2/OCP_src_stubs_Ubuntu-latest.zip
-
+          curl -L -O ${{ env.SOURCE_URL }}/v${{ env.OCCT }}/OCP_src_stubs_Ubuntu-latest.zip
         else
-          # curl -L -O https://github.com/CadQuery/OCP/releases/download/${{ env.OCP }}/OCP_src_stubs_${{ inputs.os }}.zip
-
-          curl -L -O https://github.com/bernhard-42/__temp_artefacts__/releases/download/v7.9.2/OCP_src_stubs_Windows-2022.zip
-
+          curl -L -O ${{ env.SOURCE_URL }}/v${{ env.OCCT }}/OCP_src_stubs_Windows-2022.zip
         fi
         unzip OCP_src_stubs_*
         rm *.zip
+        mv OCP_src_stubs_*/OCP-stubs pypi-stubs/
         mkdir OCP
         mv OCP_src_stubs_* OCP/OCP
 
