--- a/.github/actions/build-ocp-source/action.yml
+++ b/.github/actions/build-ocp-source/action.yml
@@ -217,7 +217,7 @@ runs:
         uv pip install build setuptools wheel
         cd pypi-stubs
         sed -i.bak 's/0\.0\.0\.0/${{ env.WHEEL }}/g' pyproject.toml
-        uv run --no-sync python -m build -w -n
+        python -m build -w -n
 
     - name: Upload cadquery_ocp stubs wheel
       if: env.PYWRAP == 'false'
