disabled environment caching consistently

--- a/.github/actions/build-ocp-source/action.yml
+++ b/.github/actions/build-ocp-source/action.yml
@@ -205,7 +205,7 @@ runs:
       uses: astral-sh/setup-uv@v7
       with:
         python-version: "3.12"
-        enable-cache: true
+        # enable-cache: true
         activate-environment: true
 
     - name: Create OCP stubs wheel
