--- a/.github/actions/build-ocp/action.yml
+++ b/.github/actions/build-ocp/action.yml
@@ -71,8 +71,7 @@ runs:
         environment-file: environment.yml
         log-level: warning
         init-shell: ${{ inputs.shells }}
-        cache-downloads: false
-        cache-environment: false
+        # cache-environment: true
         # cache-environment-key: environment-${{ inputs.python-version }}-${{ inputs.os }}-${{ inputs.use-vtk }}
 
     
