--- a/.github/actions/test-ocp/action.yml
+++ b/.github/actions/test-ocp/action.yml
@@ -143,7 +143,9 @@ runs:
         awk '/def test_export_step_timestamp_str/{print "    @pytest.mark.skip()"} 1' tests/test_exporters3d.py > tests/_tmp && mv tests/_tmp tests/test_exporters3d.py
 
         # ubuntu aarch64 has a different rounding result
-        sed -i.bak 's/actual_topo_lines = actual_topo/actual_topo_lines = actual_topo.replace("-0.00,", "0.00,").replace("-0.00)", "0.00)")/' tests/test_direct_api/test_assembly.py
+        if [[ "$(uname -s)" == "Linux" && "$(uname -m)" == "aarch64" ]]; then
+          awk '/def test_show_topology_compound/{print "    @pytest.mark.skip(reason=\"ubuntu aarch64 rounding issue\")"} 1' tests/test_direct_api/test_assembly.py > tests/_tmp && mv tests/_tmp tests/test_direct_api/test_assembly.py
+        fi
 
         if [[ "${{ inputs.use-vtk }}" == "novtk" ]]; then
           echo "=> Running novtk tests"
